--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:warrior5225@localhost:5436/db?schema=public"
+DATABASE_URL="postgres://visherua:cAj8Ke2QGWxI@ep-broken-wood-73401528.us-east-2.aws.neon.tech/neondb?schema=public"
